--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -40,12 +40,12 @@ div.footer {
 
 div.page
 {
-background:url("../images/bridge-my-path-hompage.v1-reference.png");
+/*background:url("../images/bridge-my-path-hompage.v1-reference.png");*/
 width: 1200px;
 height: 908px 
 }
 div.header {
-    background: url("../images/header-bg.png")  repeat-x scroll center top transparent;
+ background: url("../images/header-bg.png")  repeat-x scroll center top transparent;
     position:relative;
     border-bottom : #afcc49 5px solid;
     top: 3px;
@@ -53,17 +53,19 @@ div.header {
 .logoheader{padding-left: 121px; padding-top:2px; }
 div.wrapper
 {
-width:990px;
+width:1048px;
  }
 
 #menu{
+clear:both;
 float:right;
+white-space: nowrap;
  }
  #menu li {
     float: left;
-    padding-left: 18px;
+    padding-left: 27px;
     position: relative;
-    width: 99px;
+    
     z-index: 20;
 }
 #menu ul{
@@ -75,9 +77,22 @@ color: #444446;
 text-decoration:none;
 }
 #menu ul a:hover {
-.login{float: right; }
+color: white;
+  background-image:url("../images/home-active.png");
 
 
+}
+.login{float: right;   margin-top:10px;
+}
+.login a {font-family: Arial; 
+font-size: 16px;
+color: #9aacb0; text-decoration:none; }
+
+.login .or {
+font-family: Arial; 
+font-size: 12px;
+color: #9aacb0;
+font-style: italic }
 br {
   clear: both;
 }
@@ -138,3 +153,15 @@ a.join_path:hover {
   background-position: bottom;
 }
 
+a.register {
+  float: right;
+  clear: right;
+  width: 99px;
+  height: 28px;
+  background-image:url("../images/register-button.png");
+
+}
+
+a.register:hover {
+  background-position: bottom;
+}
