--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -9,6 +9,8 @@ body {
   color: #444446;
   font-family: arial, helvetica, sans-serif;
   background-image:url("/images/background-pattern.png");
+  margin: 0px;
+  padding: 0px;
 }
 /*
 charcoal: #444446
@@ -34,28 +36,20 @@ div.content {
   margin: 0px auto;
 }
 
-div.footer {
-  padding-top: 50px;
-  margin: 4em; 
-}
+
 
 div.page
 {
 /*background:url("../images/bridge-my-path-hompage.v1-reference.png");*/
 width: 1200px;
-height: 908px 
 }
+
 div.header {
  background: url("../images/header-bg.png")  repeat-x scroll center top transparent;
     position:relative;
     border-bottom : #afcc49 5px solid;
     top: 3px;
 }
-.logoheader{padding-left: 121px; padding-top:2px; }
-div.wrapper
-{
-width:1048px;
- }
 
 #menu{
 clear:both;
@@ -83,17 +77,21 @@ color: white;
 
 
 }
-.login{float: right;   margin-top:10px;
+.login{
+  float: right;
+  padding-top:10px;
 }
-.login a {font-family: Arial; 
+
+.login a {
 font-size: 16px;
-color: #9aacb0; text-decoration:none; }
+color: #9aacb0;
+text-decoration:none; }
 
 .login .or {
-font-family: Arial; 
 font-size: 12px;
 color: #9aacb0;
-font-style: italic }
+font-style: italic 
+}
 br {
   clear: both;
 }
@@ -177,4 +175,11 @@ a.register {
 
 a.register:hover {
   background-position: bottom;
+}
+
+/********** FOOTER **********/
+div.footer {
+  padding-top: 50px;
+  text-align: center;
+  padding-bottom: 20px;
 }
