--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -25,58 +25,41 @@ table.form {
   text-align: right;
 }
 
-ul {
-  list-style-type: circle;
-  margin: 1em;
-}
-
-div.content {
-  margin-left: 4em;
-  width: 920px;
-  margin: 0px auto;
-}
-
-
-
-div.page
-{
-/*background:url("../images/bridge-my-path-hompage.v1-reference.png");*/
-width: 1200px;
-}
-
+/********** HEADER **********/
 div.header {
- background: url("../images/header-bg.png")  repeat-x scroll center top transparent;
-    position:relative;
-    border-bottom : #afcc49 5px solid;
-    top: 3px;
+  background: url("../images/header-bg.png")  repeat-x scroll center top transparent;
+  border-bottom : #afcc49 5px solid;
+}
+a.register {
+  width: 99px;
+  height: 28px;
+  float: right;
+  clear: right;
+  background-image:url("../images/register-button.png");
 }
 
-#menu{
-clear:both;
-float:right;
-white-space: nowrap;
- }
- #menu li {
-    float: left;
-    padding-left: 27px;
-    position: relative;
-    
-    z-index: 20;
+a.register:hover {
+  background-position: bottom;
 }
-#menu ul{
-list-style:none;}
-#menu ul a { 
-font-style: Arial-MT Rounded;
-font-size: 18px;
-color: #444446;
-text-decoration:none;
+
+#menu {
+ float:right;
+ clear: right;
+ padding-top: 10px;
 }
-#menu ul a:hover {
-color: white;
+ 
+#menu a { 
+  font-size: 18px;
+  color: #444446;
+  text-decoration:none;
+}
+
+#menu a:hover {
+  color: white;
   background-image:url("../images/home-active.png");
-
-
+  background-color: #cac8db;
 }
+
 .login{
   float: right;
   padding-top:10px;
@@ -92,8 +75,17 @@ font-size: 12px;
 color: #9aacb0;
 font-style: italic 
 }
+
 br {
   clear: both;
+}
+
+
+/********** CONTENT **********/
+div.content {
+  margin-left: 4em;
+  width: 920px;
+  margin: 0px auto;
 }
 
 /********** PATHS **********/
@@ -161,19 +153,6 @@ a.join_path {
 }
 
 a.join_path:hover {
-  background-position: bottom;
-}
-
-a.register {
-  float: right;
-  clear: right;
-  width: 99px;
-  height: 28px;
-  background-image:url("../images/register-button.png");
-
-}
-
-a.register:hover {
   background-position: bottom;
 }
 
